--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/laravel-export",
+    "name": "tristanfrn/laravel-export",
     "description": "Create a static site bundle from a Laravel app",
     "keywords": [
         "spatie",
